Java 21 solution